[gd_scene load_steps=4 format=3 uid="uid://b1red4nt1203x"]

[ext_resource type="Script" uid="uid://872e2nkaq1rp" path="res://GUI/pause_menu/inventory/stats_menu.gd" id="1_3rrf6"]

[sub_resource type="Gradient" id="Gradient_88q6a"]
colors = PackedColorArray(0.08922793, 0.14711152, 0.24881959, 1, 0.7692804, 0.7953067, 0.68793756, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yl21o"]
gradient = SubResource("Gradient_88q6a")
fill_from = Vector2(0.1375, 0)
fill_to = Vector2(0.75, 0.56875)

[node name="StatsMenu" type="CanvasLayer"]
script = ExtResource("1_3rrf6")

[node name="ColorRect3" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -192.0
offset_right = 317.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2508037, 0.43893027, 0.72503954, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(436.5379, 247.60092)
rotation = 4.712389
scale = Vector2(7.722592, 13.6886835)
texture = SubResource("GradientTexture2D_yl21o")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 519.0
offset_top = 46.0
offset_right = 780.0
offset_bottom = 101.0
grow_horizontal = 2

[node name="PanelContainer2" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 519.0
offset_top = 116.0
offset_right = 780.0
offset_bottom = 289.27585
grow_horizontal = 2
scale = Vector2(1, 1.1600001)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 42.0
offset_top = 12.0
offset_right = 207.0
offset_bottom = 148.0
grow_vertical = 2

[node name="Button_Save" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Equip"

[node name="Button_Load" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Items"

[node name="Button_Spells" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Spells"

[node name="Button_Stats" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Stats"

[node name="Stats" type="Node" parent="Control"]

[node name="ExpCont" type="HBoxContainer" parent="Control/Stats"]
custom_minimum_size = Vector2(0, 0.35)
offset_left = 701.54504
offset_top = 84.0
offset_right = 785.54504
offset_bottom = 98.0

[node name="Label" type="Label" parent="Control/Stats/ExpCont"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "EXP"

[node name="Label2" type="Label" parent="Control/Stats/ExpCont"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="HpCont" type="HBoxContainer" parent="Control/Stats"]
custom_minimum_size = Vector2(0, 0.35)
offset_left = 547.0
offset_top = 51.184998
offset_right = 680.0
offset_bottom = 65.18503

[node name="Label" type="Label" parent="Control/Stats/HpCont"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "HP"

[node name="Label2" type="Label" parent="Control/Stats/HpCont"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "100"
horizontal_alignment = 2

[node name="HP_changed" type="Label" parent="Control/Stats/HpCont"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="HpCont2" type="HBoxContainer" parent="Control/Stats"]
custom_minimum_size = Vector2(0, 0.35)
offset_left = 547.0
offset_top = 64.55
offset_right = 680.0
offset_bottom = 78.55009

[node name="Label" type="Label" parent="Control/Stats/HpCont2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "SP"

[node name="Label2" type="Label" parent="Control/Stats/HpCont2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "100"
horizontal_alignment = 2

[node name="SP_changed" type="Label" parent="Control/Stats/HpCont2"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="LvlCont" type="HBoxContainer" parent="Control/Stats"]
custom_minimum_size = Vector2(0, 0.35)
offset_left = 547.0
offset_top = 84.0
offset_right = 636.0
offset_bottom = 98.0

[node name="Label" type="Label" parent="Control/Stats/LvlCont"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Level:"

[node name="Label2" type="Label" parent="Control/Stats/LvlCont"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="StatsCont" type="VBoxContainer" parent="Control/Stats"]
offset_left = 548.0
offset_top = 138.0
offset_right = 751.0
offset_bottom = 224.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/Stats/StatsCont"]
custom_minimum_size = Vector2(0, 0.35)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Stats/StatsCont/HBoxContainer3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Strength           "

[node name="Label2" type="Label" parent="Control/Stats/StatsCont/HBoxContainer3"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="STR_changed" type="Label" parent="Control/Stats/StatsCont/HBoxContainer3"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8352941, 0.54509807, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="str_total" type="Label" parent="Control/Stats/StatsCont/HBoxContainer3"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/Stats/StatsCont"]
custom_minimum_size = Vector2(0, 0.35)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Stats/StatsCont/HBoxContainer4"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Constitution    "

[node name="Label2" type="Label" parent="Control/Stats/StatsCont/HBoxContainer4"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="DEF_changed" type="Label" parent="Control/Stats/StatsCont/HBoxContainer4"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8352941, 0.54509807, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="def_total" type="Label" parent="Control/Stats/StatsCont/HBoxContainer4"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/Stats/StatsCont"]
custom_minimum_size = Vector2(0, 0.35)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Stats/StatsCont/HBoxContainer5"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Speed                "

[node name="Label2" type="Label" parent="Control/Stats/StatsCont/HBoxContainer5"]
custom_minimum_size = Vector2(29, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="SPD_changed" type="Label" parent="Control/Stats/StatsCont/HBoxContainer5"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8352941, 0.54509807, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="spd_total" type="Label" parent="Control/Stats/StatsCont/HBoxContainer5"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/Stats/StatsCont"]
custom_minimum_size = Vector2(0, 0.35)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Stats/StatsCont/HBoxContainer6"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Spirit Potency "

[node name="Label2" type="Label" parent="Control/Stats/StatsCont/HBoxContainer6"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="SPI_changed" type="Label" parent="Control/Stats/StatsCont/HBoxContainer6"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8352941, 0.54509807, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="spi_total" type="Label" parent="Control/Stats/StatsCont/HBoxContainer6"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="Control/Stats/StatsCont"]
custom_minimum_size = Vector2(0, 0.35)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Stats/StatsCont/HBoxContainer7"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Willpower        "

[node name="Label2" type="Label" parent="Control/Stats/StatsCont/HBoxContainer7"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="WIL_changed" type="Label" parent="Control/Stats/StatsCont/HBoxContainer7"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8352941, 0.54509807, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="wil_total" type="Label" parent="Control/Stats/StatsCont/HBoxContainer7"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2
